--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,8 +24,19 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    overflow: hidden;
 }
 .map-container {
   height: 100vh;
   width: 100%;
 }
+
+/* map css */
+
+.marker {
+  display: block;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0;
+  }
